--- a/highwheel-core/src/main/resources/style.css
+++ b/highwheel-core/src/main/resources/style.css
@@ -83,7 +83,22 @@ box-shadow: 4px 4px 2px #888888;
 }
 
 	
-.deps tr:nth-child(even)		{ background-color:#eee; }
+.deps tr:nth-child(even)	{ background-color:#eee; }
 .deps tr:nth-child(odd)		{ background-color:#fff; }
 
+table.tablesorter th {
+    padding-right : 20px;
+}
+table.tablesorter thead tr .header {
+	background-image: url(bg.gif);
+	background-repeat: no-repeat;
+	background-position: center right;
+	cursor: pointer;
+}
+table.tablesorter thead tr .headerSortUp {
+	background-image: url(asc.gif);
+}
+table.tablesorter thead tr .headerSortDown {
+	background-image: url(desc.gif);
+}
 
