add link to class cycles

--- a/highwheel-core/src/main/resources/style.css
+++ b/highwheel-core/src/main/resources/style.css
@@ -36,6 +36,11 @@ section.subcycle figure {
     margin-top: -60px;
 }
 
+section.subcycle a {
+    float: right;
+    margin-right: 40px;
+}
+
 .cons table {
  border-spacing: 4px;	
 }
